--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
   "presets": [
-    "@babel/preset-env"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": true
+        }
+      }
+    ]
   ],
   "plugins": [
     "@babel/plugin-transform-runtime"
   ]
 }
-
