--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
     "http-error": "0.0.6",
+    "joi": "^14.3.1",
+    "mockdate": "^2.0.5",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "readline-sync": "^1.4.10",
