--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "comma-dangle": ["error", "never"],
     "max-lines-per-function": ["warn", {
       "max": 15
-    }]
+    }],
+    "linebreak-style": 0
   }
 }
