--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "http-error": "0.0.6",
