--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     }
   },
   "dependencies": {
+    "@babel/cli": "^7.13.14",
     "@hapi/joi": "^16.1.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
